--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="bundle.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
