--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="bundle.js"></script>
+    <script src="umd/elmux.min.js"></script>
   </body>
 </html>
