feat: add runnable examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,21 +1,13 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-
-    <title>Elm Architecture Tutorial</title>
-    <style>
-     html,head,body { padding:0; margin:0; }
-     body { font-family: calibri, helvetica, arial, sans-serif; }
-    </style>
-  </head>
-
-  <body>
-    <div id="root"></div>
-
-    <script src="umd/elmux.min.js"></script>
-  </body>
+<head>
+  <title>Elmux Examples</title>
+</head>
+<body>
+  <h1>Elmux Examples</h1>
+  <ul>
+    <li><a href="randomGif">randomGif</a></li>
+    <li><a href="randomGifPair">randomGifPair</a></li>
+  </ul>
+</body>
 </html>
