feat(examples/websockets): add example project

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
   <ul>
     <li><a href="randomGif">randomGif</a></li>
     <li><a href="randomGifPair">randomGifPair</a></li>
+    <li><a href="websockets">websockets</a></li>
   </ul>
 </body>
 </html>
